manifests/base/notification/argocd-notifications-controller-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/component: notifications-controller
    app.kubernetes.io/name: argocd-notifications-controller
    app.kubernetes.io/part-of: argocd
  name: argocd-notifications-controller
spec:
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: argocd-notifications-controller
  template:
    metadata:
      labels:
        app.kubernetes.io/name: argocd-notifications-controller
    spec:
      volumes:
        - name: tls-certs
          configMap:
            name: argocd-tls-certs-cm
        - name: argocd-repo-server-tls
          secret:
            secretName: argocd-repo-server-tls
            optional: true
            items:
            - key: tls.crt
              path: tls.crt
            - key: tls.key
              path: tls.key
            - key: ca.crt
              path: ca.crt
        - name: argocd-repo-server-mtls
          secret:
            secretName: argocd-repo-server-mtls
            optional: true
            items:
            - key: client.crt
              path: client.crt
            - key: client.key
              path: client.key
            - key: ca.crt
              path: ca.crt
      containers:
        - args:
            - /usr/local/bin/argocd-notifications
          workingDir: /app
          livenessProbe:
            tcpSocket:
              port: 9001
          image: quay.io/argoproj/argocd:latest
          imagePullPolicy: Always
          name: argocd-notifications-controller
          volumeMounts:
            - name: tls-certs
              mountPath: /app/config/tls
            - name: argocd-repo-server-tls
              mountPath: /app/config/reposerver/tls
            - name: argocd-repo-server-mtls
              mountPath: /app/config/reposerver/mtls
          securityContext:
            capabilities:
              drop:
              - ALL
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
      serviceAccountName: argocd-notifications-controller
      securityContext:
        runAsNonRoot: true
        seccompProfile:
          type: RuntimeDefault
      nodeSelector:
        kubernetes.io/os: linux
