manifests/base/notification/argocd-notifications-controller-metrics.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/name: argocd-notifications-controller
    app.kubernetes.io/part-of: argocd
    app.kubernetes.io/component: metrics
  name: argocd-notifications-controller-metrics
spec:
  ports:
  - name: metrics
    protocol: TCP
    port: 9001
    targetPort: 9001
  selector:
    app.kubernetes.io/name: argocd-notifications-controller
