manifests/base/notification/argocd-notifications-controller-network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  labels:
    app.kubernetes.io/component: notifications-controller
    app.kubernetes.io/name: argocd-notifications-controller
    app.kubernetes.io/part-of: argocd
  name: argocd-notifications-controller-network-policy
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: argocd-notifications-controller
  ingress:
    - from:
        - namespaceSelector: { }
      ports:
        - protocol: TCP
          port: 9001
  policyTypes:
  - Ingress
